--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^1.12.11",
     "firebase": "^11.3.1",
     "groq-sdk": "^0.15.0",
     "react": "^18.2.0",
